--- a/css/global.css
+++ b/css/global.css
@@ -8,10 +8,16 @@ html {
 
 html, body {
   height: 100vh;
+  overflow-x: hidden;
+  /*Have added the 2 lines of code below to make the menu work in Safari*/
+  position: absolute; 
+  width: 100%;
 }
 
+
+
 *, *:after, *:before {
-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
@@ -34,12 +40,14 @@ h1, h2, h3 {
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: green;
 }
 
 header {
-  background: blue;
+  background: #ffffff73;
   height: 100px;
+  top: 0;
+  z-index: 100;
+  position: sticky;
 }
 
 main {
@@ -55,6 +63,82 @@ footer {
 
 /*NAVIGATION*/
 
+
+
 .logo {
   width: 130px;
+  display: block;
 }
+
+.header-layout {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  min-height: 80px;
+  padding: 5px 30px;
+}
+
+.burger {
+  display: block;
+  cursor: pointer;
+}
+
+.burger div {
+  width: 25px;
+  height: 4px;
+  background-color: #0a0d00;
+  margin: 5px;
+  transition: all 0.3s ease;
+  border-radius: 7px;
+}
+
+@keyframes navFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-7px, 6px);
+}
+
+.toggle .line2 {
+  opacity: 0;
+}
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-7px, -6px);
+}
+
+.toggle .line1, .toggle .line2, .toggle .line3 {
+  background-color: white;
+}
+
+.nav-unique {
+  position: absolute;
+  right: 0px;
+  top: 0vh;
+  height: 100vh;
+  background-color: var(--color-text);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 40vw;
+  transform: translateX(100%);
+  transition: transform 0.5s ease-in;
+  padding-top: 8rem;
+}
+
+.nav-active {
+  transform: translateX(0%);
+  margin-top: 0px;
+}
+
+
+
+
