--- a/css/global.css
+++ b/css/global.css
@@ -135,5 +135,36 @@ footer {
 }
 
 
+/*SCROLLING BLOG CARDS*/
 
+.scrolling-cards {
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding: 20px 20px 60px 20px;
+  -webkit-overflow-scrolling: touch;
+  gap: 1rem;
+}
+
+.blog-card {
+  flex: 0 0 auto;
+}
+
+.blog-card-image {
+  width: 40vw;
+}
+
+.button-wrapper {
+  width: 100%;
+  height: 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: absolute;
+  bottom: 300px;
+}
+
+.card-wrapper {
+  position: relative;
+}
 
