--- a/css/index.css
+++ b/css/index.css
@@ -42,5 +42,29 @@
 }
 
 
+/*FEATURED POSTS SECTION*/
+
+.featured-text {
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+.featured-post {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.one {
+  margin-right: 80px;
+}
+.featured-title {
+  margin-top: 0px;
+}
+
+.featured-image {
+  max-width: 50vw;
+}
 
 
