--- a/css/index.css
+++ b/css/index.css
@@ -35,21 +35,12 @@
 }
 
 
-/*LATEST POSTS SECTION*/
-
-.latest-posts-text {
-  text-align: center;
-}
 
 
 /*FEATURED POSTS SECTION*/
 
 .featured-container {
   margin: 100px 0px;
-}
-
-.featured-text {
-  text-align: center;
 }
 
 .featured-post {
@@ -79,5 +70,35 @@
 .featured-post:hover .featured-title {
   text-decoration: underline;
 }
+
+
+/*GET IN TOUCH TO TELL US YOUR STORIES*/
+
+.contact-us {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: 80vh;
+  color: white;
+  background: url(/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,50%);
+  text-align: center;
+}
+
+.contact-contents {
+  max-width: 50%;
+  color: white;
+  
+}
+
+.contact-contents:hover{
+  text-decoration: underline;
+}
+
+
 
 
