--- a/css/global.css
+++ b/css/global.css
@@ -32,8 +32,20 @@ h1, h2, h3, h4, .nav-style {
   font-family: var(--text-heading), sans-serif, Verdana, Geneva, Tahoma, sans-serif;
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 a {
   text-decoration: none;
+}
+
+/*HEADING STYLES*/
+
+.genre {
+  text-decoration: underline;
 }
 
 /*THEME LAYOUT*/
@@ -120,7 +132,7 @@ footer {
   width: 40vw;
   transform: translateX(100%);
   transition: transform 0.5s ease-in;
-  padding-top: 8rem;
+  padding: 120px 0px 0px 30px;
   margin-top: 0px;
   gap: 21px;
 }
