--- a/css/blog-article.css
+++ b/css/blog-article.css
@@ -1,7 +1,5 @@
 
-.blog-specific {
-  background-color: #F9F6D9;
-}
+
 
 .blog-header {
   height: 80vh;
@@ -21,6 +19,8 @@
 .article-container {
   display: flex;
   justify-content: center;
+  padding: 150px 0px;
+  background-color: #F9F6D9;
 }
 
 .article-wrapper {
@@ -31,6 +31,7 @@
   display: flex;
   margin: 0 auto;
   padding: 50px 0px;
+  width: 100%;
 }
 
 .article-share {
@@ -43,4 +44,10 @@
 }
 .article-link:hover {
   text-decoration: underline;
+}
+
+.article-title {
+  /* font-size: 1.717rem; */
+  
+  font-size: 150%;
 }
