--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,11 @@
+.contact {
+  background: #F9E8D9;
+}
+
 .form-container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;
+  margin: 5rem auto;
   padding: 0 1rem;
 }
 
@@ -9,4 +13,56 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.form-control {
+  width: 100%;
+  border: 1px solid var(--color-text);
+  border-radius: 1px;
+  background: none;
+  padding: 0.7em;
+}
+
+.form-control:valid {
+  border: 1px solid var(--color-success);
+  background: none;
+}
+
+.form-control:invalid {
+  background: var(--warning);
+}
+
+.form-control:valid + small {
+  display: none;
+}
+
+.form-control:invalid + small {
+  display: block;
+}
+
+
+
+
+[placeholder]::-webkit-input-placeholder { color: #8D8D8D; }
+
+[placeholder]:hover::-webkit-input-placeholder { color: var(--color-text); }
+
+[placeholder]:focus::-webkit-input-placeholder { color: transparent; }
+
+[placeholder]::-moz-placeholder { color: #8D8D8D; }
+
+[placeholder]:hover::-moz-placeholder { color: var(--color-text); }
+
+[placeholder]:focus::-moz-placeholder { color: transparent; }
+
+[placeholder]:-ms-input-placeholder { color:#8D8D8D; }
+
+[placeholder]:hover:-ms-input-placeholder { color: var(--color-text); }
+
+[placeholder]:focus:-ms-input-placeholder { color: transparent; }
+
+
+.error-message {
+  display: none;
+  color: red;
 }
