--- a/css/blog-article.css
+++ b/css/blog-article.css
@@ -80,5 +80,28 @@
 /*modal styling*/
 
 .modal {
-  
+  display: block;
+  position: fixed;
+  z-index: 1000;
+  padding: 10px 62px 0px 62px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: #000000c7;
 }
+
+.modal-text {
+  display: block;
+  z-index: inherit;
+}
+
+.close-button {
+  display: none;
+}
+.close-button2 {
+  display: block;
+}
+
+
