--- a/css/blog-article.css
+++ b/css/blog-article.css
@@ -24,7 +24,7 @@
 }
 
 .article-wrapper {
-  width: 60vw;
+  width: 50vw;
 }
 
 .article-image {
@@ -59,8 +59,9 @@
 
 .article-text img {
   width: 100%;
-  height: auto;
+  height: inherit;
   object-fit: contain;
+  position: relative;
 }
 
 .wp-block-image {
@@ -81,24 +82,30 @@
 /*modal styling*/
 
 .modal {
-  display: flex;
   position: fixed;
   z-index: 1000;
-  padding: 10px 62px 0px 62px;
+  padding: 5rem;
   margin: 0px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: #000000c7;
 }
 
 
 
-.close-button {
+.fa-times {
   display: none;
   color: white;
+  position: absolute;
+  top: 10px;
+  padding: 10px;
+  right: 10px;
+}
+.fa-times:hover {
+  cursor: pointer;
 }
 
 
