--- a/css/index.css
+++ b/css/index.css
@@ -39,7 +39,7 @@
   margin: 100px 0px;
   display: flex;
   flex-direction: column;
-  gap: 5rem;
+  gap: 10rem;
 }
 
 .featured-post {
@@ -64,6 +64,7 @@
 
 .featured-image {
   max-width: 50vw;
+  height: 100%;
 }
 
 .featured-post:hover .featured-title {
