finished homepage data import

--- a/css/global.css
+++ b/css/global.css
@@ -195,6 +195,11 @@ footer {
   margin-top: 13px;
 }
 
+/* .blog-card {
+  width: 35vw;
+  height: auto;
+} */
+
 .blog-card-image {
   width: 40vw;
   height: 27vw;
