--- a/css/blog.css
+++ b/css/blog.css
@@ -37,7 +37,7 @@
   gap: 20px;
 }
 
-.filter-selection {
+.filter-all, .filter-photo, .filter-illustration, .filter-music, .filter-film {
   background: none;
   border: none;
   font-family: var(--text-paragraph);
