--- a/css/global.css
+++ b/css/global.css
@@ -130,7 +130,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 40vw;
+  width: 32vw;
   transform: translateX(100%);
   transition: transform 0.5s ease-in;
   padding: 120px 0px 0px 30px;
@@ -255,7 +255,7 @@ footer {
   align-items: center;
 }
 
-#emailInput {
+#emailFooter {
   color: white;
   border: none;
   background: none;
@@ -282,6 +282,7 @@ footer {
 
 .footer-links {
   font-size: 85%;
+  margin-bottom: 1rem;
 }
 
 .footer-link-layout {
