--- a/css/imports/variables.css
+++ b/css/imports/variables.css
@@ -3,6 +3,6 @@
   --text-paragraph: "hind";
   --color-nav-links: #F5B736;
   --color-text: #0B0B0B;
-  --color-success: #89db70;
+  --color-success: #4ba730;
   --color-warning: #df5454;
 }
