--- a/css/contact.css
+++ b/css/contact.css
@@ -14,7 +14,7 @@ textarea {
 }
 
 .contact-button {
-  width: 20%;
+  width: 7rem;
   height: 3rem;
   align-self: flex-end;
   background: var(--color-text);
