--- a/css/global.css
+++ b/css/global.css
@@ -163,7 +163,7 @@ footer {
   display: flex;
   flex-wrap: nowrap;
   overflow-x: auto;
-  padding: 20px 20px 60px 20px;
+  padding: 0px 20px;
   -webkit-overflow-scrolling: touch;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
@@ -248,9 +248,9 @@ footer {
   border-radius: 1px;
   width: 50vw;
   height: 4rem;
-  min-width: 300px;
+  
   padding: 10px;
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
   align-items: center;
 }
