--- a/css/index.css
+++ b/css/index.css
@@ -28,9 +28,6 @@
   cursor: pointer;
 }
 
-
-
-
 /*FEATURED POSTS SECTION*/
 
 .featured-container {
@@ -98,5 +95,60 @@
 }
 
 
+
+/*WELCOME SPLASH*/
+
+.splash {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #F2ECDE;
+  z-index: 200;
+  color: var(--color-text);
+  text-align: center;
+}
+.splash.display-none {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: #F2ECDE;
+  z-index: -1;
+  color: var(--color-text);
+  text-align: center;
+  transition: all 0.5s;
+}
+
+@keyframes splashFade {
+  to {
+    opacity: 1;
+  }
+}
+
+.fade-in {
+  opacity: 0;
+  animation: splashFade 1s ease-in forwards;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.splash-text {
+  width: 50vw;
+  height: auto;
+  margin: 7px 0px;
+}
+
+.splash-heading {
+  font-size: 2rem;
+  margin-top: 3rem;
+}
 
 
