--- a/css/contact.css
+++ b/css/contact.css
@@ -27,7 +27,6 @@ textarea {
   color: var(--color-text);
 }
 
-
 .form-container {
   max-width: 800px;
   width: 100%;
@@ -56,6 +55,28 @@ textarea {
 .form-control:focus + .error-message {
   visibility: visible;
   display: block;
+}
+
+.validation-pass {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  padding: 1rem;
+  background-color: rgb(172, 235, 172);
+  border: 1px solid var(--color-success);
+}
+.validation-fail {
+  width: 100%;
+  height: auto;
+  text-align: center;
+  padding: 1rem;
+  background-color: rgb(172, 235, 172);
+  border: 1px solid var(--color-success);
+}
+
+.return-button {
+  text-decoration: underline;
+  color: var(--color-success);
 }
 
 input:not(:focus):not(:placeholder-shown):invalid {
