--- a/css/global.css
+++ b/css/global.css
@@ -40,13 +40,13 @@ a {
   text-decoration: none;
 }
 
-/*HEADING STYLES*/
+/*Heading styles*/
 
 .genre {
   text-decoration: underline;
 }
 
-/*THEME LAYOUT*/
+/*Theme layout*/
 
 .page-wrapper {
   display: flex;
@@ -72,7 +72,7 @@ footer {
   background-color: var(--color-text);
 }
 
-/*NAVIGATION*/
+/*Navigation*/
 
 .logo {
   width: 8rem;
@@ -153,7 +153,7 @@ footer {
   color: var(--color-nav-links);
 }
 
-/*HORIZONTAL SCROLLING BLOG CARDS*/
+/*Horizontal scrolling cards*/
 
 .scrolling-cards {
   display: flex;
@@ -161,12 +161,11 @@ footer {
   overflow-x: auto;
   padding: 0px 20px;
   -webkit-overflow-scrolling: touch;
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;
+  scrollbar-width: none;
   gap: 1rem;
 }
 
-/* Chrome */
 .scrolling-cards::-webkit-scrollbar {
   display: none;
 }
@@ -222,9 +221,10 @@ footer {
 
 .section-description {
   margin-top: 0px;
+  padding: 0px 10px;
 }
 
-/*FOOTER STYLES*/
+/*Footer styles*/
 
 .footer-content {
   display: flex;
