--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/*HERO SECTION*/
+/*Hero section*/
 
 .hero {
   display: flex;
@@ -16,7 +16,7 @@
 }
 
 .hero-text {
-  max-width: 50vw;
+  width: 65vw;
 }
 
 .hero-title-link {
@@ -28,7 +28,7 @@
   cursor: pointer;
 }
 
-/*FEATURED POSTS SECTION*/
+/*Featured post section*/
 
 .featured-container {
   margin: 100px 0px;
@@ -65,20 +65,15 @@
   text-decoration: underline;
 }
 
-/*GET IN TOUCH TO TELL US YOUR STORIES*/
+/*Get in touch to tell us your stories*/
 
 .contact-us {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
-  height: 80vh;
+  height: 70vh;
   color: white;
-  background: url(/assets/images/frankie-cordoba-fPYJeMmYWM4-unsplash.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  box-shadow: inset 0 0 0 1000px rgba(0,0,0,50%);
+  background-color: #D4A373;
   text-align: center;
 }
 
@@ -91,7 +86,7 @@
   text-decoration: underline;
 }
 
-/*WELCOME SPLASH*/
+/*Welcome splash*/
 
 .splash {
   display: flex;
